# Algorithms-and-data-structures

./: CMakeLists.txt  README.md
ДЗ№1/: 1_3.cpp  2_4.cpp  3_3.cpp  4_1.cpp  5_1.cpp  6_1.cpp  7_1.cpp  CMakeLists.txt
ДЗ№2/: 1_1.cpp  2_3.cpp  3_2.cpp  4_1.cpp  CMakeLists.txt
ДЗ№3/: 2.cpp  3.cpp  CMakeLists.txt
ДЗ№3/Graph/: ArcGraph.cpp  ArcGraph.h  IGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h
